# python_work

./: 1.py  README.md  app.py  forms.py  pyproject.toml  依赖库.txt
static/: style.css
templates/: base.html  bootstrap.html  dropzone.html  index.html
