[tool.poetry]
name = "大作业"
version = "0.1"
description = "last day"
authors = ["yc"]
license = "mit"

[tool.poetry.dependencies]
python = "3.9.2"
Flask = "^2.1.2"
Flask-Dropzone = "^1.6.0"
Flask-WTF = "^1.0.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
